Fix word wrap and some button issues

--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,6 @@ body.bg-none {
 canvas {
   display: block;
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   image-rendering: pixelated;
 }
